css/app.css
/* ... */
button.action:focus,
button.action:hover {
    background: #597BE7;
}

button.secondary-action {
    background: #ececec;
}

button.secondary-action:focus,
button.secondary-action:hover {
    background: #cccccc;
}

button.save.has-count {
    padding: 9px;
}

button.save .count {
    display: none;
}

button.save.has-count .count {
    display: block;
    position: absolute;
    top: 5px;
    background: #fff;
    border-color: #fff;
    opacity: 0.5;
    color: #333;
    padding: 10px;
    height: 30px;
    line-height: 12px;
    border-radius: 4px;
    margin: auto;
    margin-left: 8.3333%;
}

button.save.has-count .count::before {
    content: "";
    margin: auto;
    width: 0;
    height: 0;
    position: absolute;
    left: -6px;
    top: 0;
    bottom: 0;
    border-top:    6px solid transparent;
    border-bottom: 6px solid transparent;
    border-right-width: 6px;
    border-right-style: solid;
    border-right-color: inherit;
}

/* Icons */

.icon {
    vertical-align: top;
    width: 20px;
    height: 20px;
}

.icon.inline {
    vertical-align: text-top;
    width: 14px;
    height: 14px;
    margin: 0px 3px;
}

.icon.pre-text {
    margin-right: 5px;
}

.icon.light {
    color: #fff;
}

.icon.created {
    color: #00ca07;
}

.icon.modified {
    color: #666;
}

.icon.deleted {
    color: #ea0000;
}

.user-icon {
    max-height: 20px;
    max-width: 20px;
    height: auto;
    width: auto;
    border-radius: 3px;
}


/* ToolBar / Persistent UI Elements
------------------------------------------------------- */

#bar {
    position: fixed;
    padding: 10px 0;
    left:0;
    top:0;
    right:0;
    height:60px;
    z-index: 9;
    min-width: 768px;
}

/* Header for modals / panes
------------------------------------------------------- */

.header {
    border-bottom: 1px solid #ccc;
    height: 60px;
    position: relative;
}

.header h3 {
    text-align: left;
    margin-bottom: 0;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    padding: 20px 20px 20px 40px;
}

.header button,
.modal > button {
    border-radius: 0;
    width: 40px;
    text-align: center;
    overflow: hidden;
}

.header button {
    position: relative;
    height: 100%;
}

.entity-editor-pane .header button.preset-close,
.preset-list-pane .header button.preset-choose {
    position: absolute;
    right: 0;
    top: 0;
}

.entity-editor-pane .header button.preset-choose {
    position: absolute;
    left: 0;
    top: 0;
}

.preset-choose {
    font-size: 16px;
    line-height: 1.25;
    font-weight: bold;
}

.modal > button {
    position: absolute;
    right: 0;
    top: 0;
    height: 59px;
    z-index: 50;
}

.footer {
    position: absolute;
    bottom: 0;
    padding: 5px 20px 5px 20px;
    border-top: 1px solid #ccc;
    background-color: #fafafa;
    width: 100%;
}

.sidebar-component .body {
    width: 100%;
    overflow: auto;
    top: 60px;
    bottom: 0;
    position: absolute;
}

/* Inspector
------------------------------------------------------- */

#sidebar {
    position: relative;
    float: left;
    height: 100%;
    overflow: hidden;
    z-index: 10;
    background: #f6f6f6;
}

.sidebar-component {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
}

.inspector-wrap {
    width: 100%;
    height: 100%;
}

.inspector-hidden {
    display: none;
}

.inspector-body {
    overflow-y: scroll;
    overflow-x: hidden;
    position: absolute;
    right: 0;
    left: 0;
    bottom: 0;
}




.feature-list-pane .inspector-body {
    top: 120px;
}

.preset-list-pane .inspector-body {
    top: 120px;
}

.entity-editor-pane .inspector-body {
    top: 60px;
}

.selection-list-pane .inspector-body {
    top: 60px;
}

.inspector-inner {
    padding: 20px;
    position: relative;
}

#sidebar .search-header .icon {
    display: block;
    position: absolute;
    left: 10px;
    top: 80px;
    pointer-events: none;
}

#sidebar .search-header input {
    position: absolute;
    top: 60px;
    height: 60px;
    width: 100%;
    padding: 5px 10px;
    border-radius: 0;
    border-width: 0;
    border-bottom-width: 1px;
    text-indent: 30px;
    font-size: 18px;
    font-weight: bold;
}

/* Feature list */

.feature-list  {
    width:100%;
}

.no-results-item,
.geocode-item,
.feature-list-item {
    width: 100%;
    position: relative;
    border-bottom: 1px solid #ccc;
    border-radius: 0;
}

.feature-list-item {
    background-color: white;
    font-weight: bold;
    height: 40px;
    line-height: 20px;
}

.feature-list-item:hover {
    background-color: #ececec;
}

.feature-list-item button {
    background: transparent;
}

.feature-list-item .label {
    text-align: left;
    padding: 10px 10px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    border-left: 1px solid rgba(0, 0, 0, .1);
}

.feature-list-item .label .icon {
    opacity: .5;
}

.feature-list-item .close {
    float: right;
    padding: 10px;
}

.feature-list-item .close .icon {
    opacity: 1;
}

.feature-list-item .entity-type {
    color:#7092ff;
}

.feature-list-item:hover .entity-type {
    color:#597be7;
}

.feature-list-item .entity-name {
    font-weight: normal;
    color: #666;
    padding-left: 10px;
}

/* Presets
------------------------------------------------------- */

/* Preset grid  */

.preset-list  {
    width:100%;
    padding: 20px 20px 10px 20px;
    border-bottom: 1px solid #ccc;
}

.preset-list-button-wrap {
    position: relative;
    margin-bottom: 10px;
    height: 60px;
}

.preset-list-button {
    width: 100%;
    height: 100%;
    position: relative;
    border: 1px solid #ccc;
}

.preset-list.filtered .preset-list-item:first-child .preset-list-button {
    background: #ececec;
}

.preset-icon-fill-area {
    cursor: inherit;
    height: 40px;
    width: 40px;
    margin: auto;
    position: absolute;
    left: 10px;
    top: 10px;
}
/* ... */

